Included the questionnaire screens from Kodarie & made changes to them.

--- a/app/src/main/res/layout/activity_questionnaire_menu_screen.xml
+++ b/app/src/main/res/layout/activity_questionnaire_menu_screen.xml
@@ -16,13 +16,15 @@
             android:layout_height="250dp"
             android:id="@+id/btnOverview"
             android:layout_centerVertical="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_alignParentStart="true"
+            android:onClick="btnOverview"/>
     <Button
             android:text="@string/section_by_section"
             android:layout_width="300dp"
             android:id="@+id/btnSecBySec"
             android:layout_height="250dp"
             android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"/>
+            android:layout_alignParentEnd="true"
+            android:onClick="btnSectionBySection"/>
 
 </RelativeLayout>
