--- a/app/src/main/res/layout/activity_q1_to_q10.xml
+++ b/app/src/main/res/layout/activity_q1_to_q10.xml
@@ -12,6 +12,16 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         tools:context="uk.ucl.group21.currentviewapp.Q1ToQ10">
 
+    <Button
+            android:text="Button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/button2"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginRight="64dp"
+            android:layout_marginBottom="64dp" android:onClick="btnNext"/>
+
     <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -138,7 +148,7 @@
                         android:id="@+id/radioButton1.1"
                         android:layout_column="3"
                         android:textAlignment="center"
-                        android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -146,7 +156,7 @@
                         android:layout_column="4"
                         android:layout_weight="1"
                         android:textAlignment="center"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -154,7 +164,7 @@
                         android:layout_column="5"
                         android:layout_weight="1"
                         android:textAlignment="center"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -162,7 +172,7 @@
                         android:layout_column="6"
                         android:layout_weight="1"
                         android:textAlignment="center"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -170,7 +180,7 @@
                         android:layout_column="7"
                         android:layout_weight="1"
                         android:layout_marginRight="5dp" android:layout_gravity="center_horizontal"
-                        android:width="10dp"/>
+                        android:width="25dp"/>
 
             </TableRow>
 
@@ -200,28 +210,28 @@
                         android:id="@+id/radioButton2.1"
                         android:layout_column="3"
                         android:layout_weight="1"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/radioButton2.2"
                         android:layout_column="4"
                         android:layout_weight="1"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/radioButton2.3"
                         android:layout_column="5"
                         android:layout_weight="1"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/radioButton2.4"
                         android:layout_column="6"
                         android:layout_weight="1"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
                 <RadioButton
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -229,7 +239,7 @@
                         android:layout_column="7"
                         android:layout_weight="1"
                         android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
-                        android:width="10dp"/>
+                        android:width="25dp"/>
             </TableRow>
 
             <TableRow
@@ -259,7 +269,7 @@
                             android:id="@+id/radioButton3.1"
                             android:layout_column="3"
                             android:layout_weight="1"
-                            android:layout_gravity="center_horizontal" android:width="10dp"/>
+                            android:layout_gravity="center_horizontal" android:width="25dp"/>
 
                 <RadioButton
                         android:layout_width="wrap_content"
@@ -267,7 +277,7 @@
                         android:id="@+id/radioButton3.2"
                         android:layout_column="4"
                         android:layout_weight="1"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
 
                 <RadioButton
                         android:layout_width="wrap_content"
@@ -275,7 +285,7 @@
                         android:id="@+id/radioButton3.3"
                         android:layout_column="5"
                         android:layout_weight="1"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
 
                 <RadioButton
                         android:layout_width="wrap_content"
@@ -283,7 +293,7 @@
                         android:id="@+id/radioButton3.4"
                         android:layout_column="6"
                         android:layout_weight="1"
-                        android:layout_gravity="center_horizontal" android:width="10dp"/>
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
 
                 <RadioButton
                         android:layout_width="wrap_content"
@@ -292,12 +302,10 @@
                         android:layout_column="7"
                         android:layout_weight="1"
                         android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
-                        android:width="10dp"/>
+                        android:width="25dp"/>
 
 
             </TableRow>
-
-
         </TableLayout>
     </ScrollView>
 </RelativeLayout>
