--- a/app/src/main/res/layout/activity_q11_to_q20_screen.xml
+++ b/app/src/main/res/layout/activity_q11_to_q20_screen.xml
@@ -139,7 +139,7 @@
                     android:id="@+id/textView2"
                     android:layout_column="2"
                     android:layout_weight="2"
-                    android:textSize="18sp"/>
+                    android:textSize="18sp" android:maxWidth="300dp"/>
 
             <RadioButton
                     android:layout_width="wrap_content"
@@ -201,7 +201,7 @@
                     android:text="@string/q12"
                     android:layout_column="2"
                     android:textSize="18sp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="2" android:maxWidth="300dp"/>
 
             <RadioButton
                     android:layout_width="wrap_content"
@@ -260,7 +260,7 @@
                     android:text="@string/q13"
                     android:layout_column="2"
                     android:textSize="18sp"
-                    android:layout_weight="2"/>
+                    android:layout_weight="2" android:maxWidth="300dp"/>
 
             <RadioButton
                     android:layout_width="wrap_content"
