--- a/app/src/main/res/layout/activity_q11_to_q20_screen.xml
+++ b/app/src/main/res/layout/activity_q11_to_q20_screen.xml
@@ -306,6 +306,69 @@
             </TableRow>
 
 
+            <!-- Question 14 -->
+            <TableRow
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent">
+
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="14"
+                        android:layout_column="1"
+                        android:layout_weight="1"
+                        android:textAlignment="center" android:textSize="18sp"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceLarge"
+                        android:text="@string/q14"
+                        android:layout_column="2"
+                        android:textSize="18sp"
+                        android:layout_weight="2" android:maxWidth="300dp"/>
+
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/none14"
+                        android:layout_column="3"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
+
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/mild14"
+                        android:layout_column="4"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
+
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/moderate14"
+                        android:layout_column="5"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
+
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/severe14"
+                        android:layout_column="6"
+                        android:layout_weight="1"
+                        android:layout_gravity="center_horizontal" android:width="25dp"/>
+
+                <RadioButton
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/not_known14"
+                        android:layout_column="7"
+                        android:layout_weight="1"
+                        android:layout_marginEnd="5dp" android:layout_gravity="center_horizontal"
+                        android:width="25dp"/>
+            </TableRow>
         </TableLayout>
     </ScrollView>
 </RelativeLayout>
