--- a/app/src/main/res/layout/activity_q38_to_q44.xml
+++ b/app/src/main/res/layout/activity_q38_to_q44.xml
@@ -1,379 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="uk.ucl.group21.currentviewapp.Q1ToQ10">
-
-    <ScrollView
+<android.support.v4.widget.DrawerLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scrollbars="vertical|horizontal"
-        android:fillViewport="true" android:layout_marginStart="0dp"
-        android:layout_alignParentTop="true" android:layout_alignParentStart="true">
+        android:fitsSystemWindows="true"
+        tools:openDrawer="start">
 
-        <TableLayout
+    <include
+            layout="@layout/app_bar_nav_drawer"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+    <include
+            layout="@layout/activity_q38_to_q44_screen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+
+
+    <android.support.design.widget.NavigationView
+            android:id="@+id/nav_view"
+            android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:id="@+id/table_layout">
+            android:layout_gravity="start"
+            android:fitsSystemWindows="true"
+            app:headerLayout="@layout/nav_header_nav_drawer"
+            app:menu="@menu/activity_nav_drawer_drawer"/>
 
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:textColor="#ffffff"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/SELECTED_COMPLEXITY_FACTORS"
-                    android:textStyle="bold"
-                    android:layout_column="2"
-                    android:layout_weight="2"
-                    android:textSize="24sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Yes"
-                    android:layout_column="3"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/No"
-                    android:layout_column="4"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Not_Known"
-                    android:layout_column="5"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal"/>
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-                <Space
-                    android:layout_width="wrap_content"
-                    android:layout_height="20dp"/>
-            </TableRow>
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="8"
-                    android:id="@+id/textView1"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:textAlignment="center" android:textSize="18sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q38"
-                    android:layout_column="2"
-                    android:layout_weight="2"
-                    android:textSize="18sp"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton31.1"
-                    android:layout_column="3"
-                    android:textAlignment="center"
-                    android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="10dp"/>
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton31.2"
-                    android:layout_column="4"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton31.3"
-                    android:layout_column="5"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="9"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:textAlignment="center" android:textSize="18sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q39"
-                    android:id="@+id/textView2"
-                    android:layout_column="2"
-                    android:layout_weight="2"
-                    android:textSize="18sp"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton32.1"
-                    android:layout_column="3"
-                    android:textAlignment="center"
-                    android:layout_weight="1" android:layout_gravity="center_horizontal" android:width="10dp"/>
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton32.2"
-                    android:layout_column="4"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton32.3"
-                    android:layout_column="5"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-
-            </TableRow>
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="10"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:textAlignment="center" android:textSize="18sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q40"
-                    android:layout_column="2"
-                    android:textSize="18sp"
-                    android:layout_weight="2"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton33.1"
-                    android:layout_column="3"
-                    android:layout_weight="1"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton33.2"
-                    android:layout_column="4"
-                    android:layout_weight="1"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton33.3"
-                    android:layout_column="5"
-                    android:layout_weight="1"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-
-            </TableRow>
-
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="11"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:textAlignment="center" android:textSize="18sp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/q41"
-                    android:layout_column="2"
-                    android:textSize="18sp"
-                    android:layout_weight="2"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton34.1"
-                    android:layout_column="3"
-                    android:layout_weight="1"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton34.2"
-                    android:layout_column="4"
-                    android:layout_weight="1"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-                <RadioButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/radioButton34.3"
-                    android:layout_column="5"
-                    android:layout_weight="1"
-                    android:layout_gravity="center_horizontal" android:width="10dp"/>
-
-
-            </TableRow>
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:textAlignment="center" android:textSize="18sp"/>
-
-
-
-            </TableRow>
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="1"
-                    android:layout_weight="1"
-                    android:textAlignment="center" android:textSize="18sp"/>
-
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/Next"
-                    android:id="@+id/btnNextQ38to44"
-                    android:onClick="btnNextQ38to44"/>
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="3"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="4"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="5"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="6"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal" android:minWidth="50dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:text="@string/Empty"
-                    android:layout_column="7"
-                    android:layout_weight="1"
-                    android:textAlignment="center"
-                    android:textSize="18sp"
-                    android:layout_gravity="center_horizontal"/>
-
-            </TableRow>
-
-
-
-
-        </TableLayout>
-    </ScrollView>
-</RelativeLayout>
+</android.support.v4.widget.DrawerLayout>
